# tenex

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Makefile  PLAN.md  README.md  SPEC.md  TODO.md  bacon.toml  build.rs  hawk.toml  lcov.info  pyproject.toml  rust-toolchain.toml  test_conflict.txt
.cargo/: config.toml
.claude/: settings.json
.github/workflows/: ci.yml
ci/: llvm-cov-report.sha256  llvm-cov-report.txt
ci/coverage-theoretical-max-receipts/: coverage-theoretical-max.json  coverage-theoretical-max.sha256
ci/llvm-cov-receipts/: required-platforms.txt
ci/llvm-cov-receipts/linux/: llvm-cov-report.sha256  llvm-cov-report.txt
ci/llvm-cov-receipts/macos/: llvm-cov-report.sha256  llvm-cov-report.txt
ci/llvm-cov-receipts/windows/: llvm-cov-report.sha256  llvm-cov-report.txt
crates/vt100-ctt/: Cargo.toml
crates/vt100-ctt/src/: grid.rs  lib.rs  screen.rs  tui_term.rs
docker/: worker.Dockerfile
docs/specs/: 98-per-client-preview-viewport.md
repro/: repro_docker_git_root.rs  run.sh
scripts/: cargo_with_isolated_state.py
scripts/ci/: coverage_theoretical_max.py  coverage_verify_platform_theoretical_max.py  test_ci_concurrency.py  test_coverage_theoretical_max.py
scripts/precommit/: pre_push_theoretical_max_gate.py  run_cargo_hook.py  test_run_cargo_hook.py  test_write_llvm_cov_receipt.py  write_llvm_cov_receipt.py
src/: cli.rs  command.rs  conversation.rs  lib.rs  main.rs  migration.rs  paths.rs  prompts.rs  release_notes.rs  test_support.rs  update.rs
src/action/: agent.rs  confirm.rs  diff.rs  git.rs  misc.rs  mod.rs  modal.rs  navigation.rs  picker.rs  preview.rs  tests.rs  text_input.rs
src/action/agent/: tests.rs
src/action/confirm/: tests.rs
src/action/diff/: tests.rs
src/action/git/: tests.rs
src/action/misc/: tests.rs
src/action/modal/: tests.rs
src/action/navigation/: tests.rs
src/action/picker/: tests.rs
src/action/preview/: tests.rs
src/action/text_input/: tests.rs
src/agent/: instance.rs  mod.rs  status.rs  storage.rs
src/app/: data.rs  event.rs  handler.rs  mod.rs  settings.rs  sidebar.rs  state.rs
src/app/handlers/: agent_lifecycle.rs  broadcast.rs  git_ops.rs  mod.rs  preview.rs  swarm.rs  sync.rs  tests.rs  window.rs
src/app/handlers/git_ops/: merge.rs  mod.rs  open_pr.rs  push.rs  rebase.rs  rename.rs  tests.rs
src/app/state/: command_palette.rs  git_op.rs  input.rs  lifecycle.rs  mod.rs  models.rs  navigation.rs  review.rs  scroll.rs  settings_menu.rs  spawn.rs  tests.rs  text_input.rs  ui.rs
src/config/: keys.rs  mod.rs
src/git/: branch.rs  branch_cli.rs  diff.rs  diff_cli.rs  mod.rs  worktree.rs  worktree_cli.rs
src/git/diff/: tests.rs
src/mux/: backend.rs  capture.rs  client.rs  daemon.rs  discovery.rs  endpoint.rs  ipc.rs  mod.rs  output.rs  pidfile.rs  protocol.rs  render.rs  session.rs
src/mux/backend/: tests.rs
src/mux/capture/: tests.rs
src/mux/client/: tests.rs
src/mux/daemon/: tests.rs
src/mux/discovery/: tests.rs
src/mux/ipc/: tests.rs
src/mux/output/: tests.rs
src/mux/pidfile/: tests.rs
src/mux/render/: tests.rs
src/mux/server/: capture.rs  mod.rs  session.rs
src/mux/server/capture/: tests.rs
src/mux/server/session/: tests.rs
src/runtime/: docker.rs  mod.rs  tests.rs
src/state/: branch_selector.rs  broadcasting.rs  changelog.rs  child_count.rs  child_prompt.rs  command_palette.rs  confirm_push.rs  confirm_push_for_pr.rs  confirming.rs  creating.rs  custom_agent_cmd.rs  diff_focused.rs  error_modal.rs  help.rs  keyboard_remap_prompt.rs  merge_branch_selector.rs  mod.rs  model_selector.rs  normal.rs  preparing_docker.rs  preview_focused.rs  prompting.rs  rebase_branch_selector.rs  reconnect_prompt.rs  rename_branch.rs  review_child_count.rs  review_info.rs  scrolling.rs  settings_menu.rs  success_modal.rs  switch_branch_selector.rs  synthesis_prompt.rs  terminal_prompt.rs  update_prompt.rs  update_requested.rs
src/tenex_cli/: workflows.py
src/tmux/: capture.rs  mod.rs  session.rs
src/tui/: mod.rs  render.rs  tests.rs
src/tui/input/: command.rs  confirm.rs  mod.rs  mouse.rs  normal.rs  picker.rs  preview_focused.rs  tests.rs  text_input.rs
src/tui/input/command/: tests.rs
src/tui/input/confirm/: tests.rs
src/tui/input/mouse/: tests.rs
src/tui/input/normal/: tests.rs
src/tui/input/picker/: tests.rs
src/tui/input/text_input/: tests.rs
src/tui/render/: colors.rs  main_layout.rs  mod.rs  tests.rs
src/tui/render/main_layout/: tests.rs
src/tui/render/modals/: branch.rs  changelog.rs  command_palette.rs  confirm.rs  error.rs  help.rs  input.rs  mod.rs  models.rs  picker.rs  progress.rs  settings_menu.rs  tests.rs
src/tui/render/modals/changelog/: tests.rs
src/tui/render/modals/confirm/: tests.rs
src/ui/: mod.rs
src/ui/components/: agent_list.rs  diff_view.rs  mod.rs  preview.rs  status_bar.rs
tests/: action_diff_focused_dispatch_coverage.rs  action_dispatch_probe.rs  cli_binary_test.rs  codex_session_probe.rs  config_worktree_paths.rs  docker_runtime_smoke.rs  git_branch_coverage.rs  integration.rs  integration_cli.rs  integration_render.rs  migration_smoke.rs  mux_client_endpoint_error.rs  mux_client_spawn_probe.rs  mux_discovery_proc_coverage.rs  mux_endpoint_default.rs  mux_running_version_probe.rs  mux_session_coverage.rs  mux_working_dir.rs  open_pr_flow_coverage.rs  preview_handlers_coverage.rs  storage_coverage.rs  test_workflows.py  tui_smoke.rs  tui_test_support.rs  unit.rs  update_current_version.rs
tests/common/: agent_factory.rs  fixture.rs  helpers.rs  mod.rs
tests/integration/: actions.rs  agent.rs  auto_connect.rs  diff.rs  git.rs  hierarchy.rs  mux.rs  performance.rs  persistence.rs  review.rs  synthesis.rs  tmux.rs  workflow.rs  worktree_conflict.rs
tests/unit/cli/: mod.rs
tests/unit/command/: mod.rs
tests/unit/config/: mod.rs
tests/unit/conversation/: mod.rs
tests/unit/migration/: mod.rs
tests/unit/paths/: mod.rs
tests/unit/prompts/: mod.rs
tests/unit/release_notes/: mod.rs
tests/unit/support/: mod.rs
tests/unit/update/: mod.rs
(+5 files in other folders)
